--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 [x] Basic voxel rendering
 [x] Support loading a .vox
 [x] Non-cube bounding volumes
+[x] Use proper voxel palette
 [ ] Allow transforming the volume
 [ ] Compute proper depth
 [ ] Splat the voxel models into a global map for GI/shadows/etc
+[ ] Integrate dear imgui so we can have some debug controls
