--- a/TODO
+++ b/TODO
@@ -7,4 +7,4 @@
 [ ] Compute proper depth
 [ ] Splat the voxel models into a global map for GI/shadows/etc
 [ ] Integrate dear imgui so we can have some debug controls
-[ ] Render offscreen
+[x] Render offscreen
